@@ -1,4 +1,4 @@
-#Mon Jun 18 10:36:05 EST 2007
+#Mon Jun 25 13:08:03 EST 2007
 major_version=1.6b
-minor_version=57
+minor_version=58
 app_name=eLife
